--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atproto/api": "^0.3.10",
     "@headlessui/react": "^1.7.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -21,6 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-grid-gallery": "^1.0.0",
+    "react-loading-icons": "^1.1.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
